<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanumbot_bringup</name>
  <version>1.0.0</version>
  <description>Launch scripts for starting the Mecanum wheel robot</description>
  <license>Apache 2.0</license>
  <author email="randy@deb-ict.com">Randy Deborggraeve</author>
  <maintainer email="randy@deb-ict.com">Randy Deborggrave</maintainer>
  <url type="website">https://www.diyrobot.eu/mecanum-bit</url>
  <url type="repository">https://github.com/DeborggraeveR/ros2-mecanum-bot</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ros2-mecanum-bot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>mecanumbot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
